Fix horizontal overflow with alert box

--- a/src/styles/partials/_alert.scss
+++ b/src/styles/partials/_alert.scss
@@ -11,9 +11,9 @@
   flex-direction: column;
   align-items: flex-end;
   gap: 4px;
-  margin-right: 8px;
-  margin-left: 8px;
+  padding: 0 var(--padding-xs);
   font-size: var(--text-sm);
+  overflow: hidden;
 
   > * {
     padding: var(--padding-xs) var(--padding-sm);
